RESOLVED FIXED308823
AX: AXCoreObject::partialOrder can loop infinitely for cross-frame objects with ENABLE(ACCESSIBILITY_LOCAL_FRAME)
https://bugs.webkit.org/show_bug.cgi?id=308823
Summary AX: AXCoreObject::partialOrder can loop infinitely for cross-frame objects wi...
Tyler Wilcock
Reported 2026-02-27 08:16:56 PST
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-02-27 08:17:02 PST
Tyler Wilcock
Comment 2 2026-02-27 08:34:27 PST
EWS
Comment 3 2026-02-27 16:37:19 PST
Committed 308374@main (ebefa2a06e1b): <https://commits.webkit.org/308374@main> Reviewed commits have been landed. Closing PR #59580 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.