AX: AXCoreObject::partialOrder can loop infinitely for cross-frame objects with ENABLE(ACCESSIBILITY_LOCAL_FRAME) https://bugs.webkit.org/show_bug.cgi?id=308823 rdar://171359781

Reviewed by Joshua Hoffman.

With ENABLE(ACCESSIBILITY_LOCAL_FRAME), each frame has its own accessibility tree root,
so parentObject() returns nullptr at frame boundaries. In partialOrder(), when this happened,
current/otherCurrent were never set to nullptr, causing an infinite loop that hit the
failsafe assertion. Fix by nulling out current/otherCurrent when parentObject() returns
nullptr. Also tighten the post-loop assertion to only fire when objects are in the same
tree (where a shared ancestor should always exist), since cross-frame objects legitimately
may not share one.

Fixes accessibility/mac/ordered-textmarker-crash.html with ENABLE(ACCESSIBILITY_LOCAL_FRAME).

* Source/WebCore/accessibility/AXCoreObject.cpp:
(WebCore::AXCoreObject::partialOrder):

Canonical link: https://commits.webkit.org/308374@main